# shortcut-key

./: README.md  pyproject.toml  test.py
src/: handler.py  main.py  settings.py
src/ext_services/gcp/: speach_to_text.py
src/functions/nature_remo/: aircon.py  nature_remo_api.py  projector.py  room_right.py
src/functions/operate_windows/: app_window.py  key_board.py
src/functions/windows_app/: win_app.py
src/functions/windows_app/edge/: edge_app.py  operation_edge.py
src/recognizer/: key_detector.py  mic_detector.py  trigger.py
